syntax = "proto3";

option csharp_namespace = "ClientTLS1";



// The greeting service definition.
service DataTransfer {
  rpc SendData (DataRequest) returns (DataResponse);
}

// The request message containing the user's name.
message DataRequest {
  bytes data = 1;
}

// The response message containing the greetings.
message DataResponse {
  string message = 1;
}